Fix article list on mobile

--- a/blocks/article-list/article-list.css
+++ b/blocks/article-list/article-list.css
@@ -1,6 +1,8 @@
 .article-list {
   max-width: var(--grid-container-width);
   margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr;
   gap: var(--spacing-l);
 
   a {
@@ -12,7 +14,6 @@
 
 @media (width >= 900px) {
   .article-list {
-    display: grid;
     grid-template-columns: repeat(3, 1fr);
   }
 }
